# Project-Difference-Calculator

./: Makefile  README.md  diff_list.py  govno_ebanoe.txt  pyproject.toml
.github/workflows/: boilerplate.yml
gendiff/: __init__.py  construct_diff.py  define_formatter.py  errors.py  file_to_dict.py  flat_file.py  gendiff.py  generate_diff.py  generate_json_file.py  generate_plain_lines.py  generate_stylish_lines.py  main.py  parse_args.py
gendiff/formaters/: plain.py  stylish.py
gendiff/formatets/: generate_plain_lines.py  generate_stylish_lines.py
gendiff/formatters/: define_formatter.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
gendiff/tests/: test_diff.py  test_flat_file.py
gendiff/tests/fixtures/: diff_list_flat.py  diff_list_nested.txt  except_diff_flat.py  except_diff_nested.txt  except_to_json.txt  file1_for_test.yml  file2_for_test.json  file2_for_test.yml  make_file.py  test_diff_to_json.json  test_expected_empty_file.txt  test_expected_flat_stylish.txt  test_expected_tree.txt
tests/: test_diff.py
tests/fixtures/: file4_for_test.yml
