[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The program detects differences in files."
authors = ["Kuragin Ivan <curagin.vanya@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/JduMoment/python-project-50"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "3.12.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
